Client: online users count switch element visible disconnect menu fixed

--- a/src/client/css/base_style.css
+++ b/src/client/css/base_style.css
@@ -2,6 +2,12 @@
     -fx-text-fill: -fx-font-color;
 }
 
+.root {
+    -fx-background-color: -fx-textarea-bg;
+    -fx-border-color: -fx-bordercolor;
+    -fx-border-width: 0 1 1 1;
+}
+
 #titleLabel {
     -fx-font-weight: bold;
     -fx-padding: 2 0 0 15;
@@ -126,7 +132,7 @@
     -fx-background-radius: 5;
 }
 
-.list-cell:hover{
+.list-cell:hover {
     -fx-text-fill: -fx-font-over-color;
 }
 
@@ -157,11 +163,18 @@
     -fx-background-color: -fx-font-color;
 }
 
+#lblOnline {
+    -fx-background-color: -fx-menu-bg;
+    -fx-alignment: center;
+    -fx-font-weight: bold;
+    -fx-border-color: -fx-bordercolor;
+    -fx-border-width: 0 1 0 0;
+}
+
 #menuTop {
     -fx-background-color: -fx-menu-bg;
     -fx-border-color: -fx-bordercolor;
-    -fx-border-width: 0 1 0 1;
-    -fx-text-fill: -fx-font-color;
+    -fx-border-width: 0 0 0 1;
 }
 
 .context-menu {
